welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:19: error: not found: value get
      setPos(getMondeLargeur() - 1 - i, get(Y))
                                        ^ZigZag:19: error: not found: value Y
      setPos(getMondeLargeur() - 1 - i, get(Y))
                                            ^